--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="8dp"
-        android:text="+"
+        android:text="."
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/no_2" />
 
@@ -44,14 +44,14 @@
         android:id="@+id/executeBtn"
         android:layout_width="285dp"
         android:layout_height="51dp"
-        android:layout_marginLeft="42dp"
+        android:layout_marginLeft="74dp"
         android:layout_marginStart="42dp"
         android:onClick="onClick"
         android:text="Execute"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.234" />
+        app:layout_constraintVertical_bias="0.223" />
 
     <EditText
         android:id="@+id/outputTxt"
@@ -75,35 +75,177 @@
         android:id="@+id/no_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:onClick="calcButtonPressed"
         android:text="1"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/no_0"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/no_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
         android:onClick="calcButtonPressed"
         android:text="2"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/no_0"
         app:layout_constraintLeft_toRightOf="@+id/no_1" />
 
     <Button
         android:id="@+id/enterBtn"
         android:layout_width="wrap_content"
+        android:layout_height="105dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginLeft="8dp"
+        android:onClick="calcButtonPressed"
+        android:text="Enter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/add" />
+
+    <Button
+        android:id="@+id/no_0"
+        android:layout_width="183dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="0dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:onClick="calcButtonPressed"
-        android:text="Enter"
+        android:text="0"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/add"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_editor_absoluteY="464dp" />
+
+    <Button
+        android:id="@+id/no_5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:onClick="calcButtonPressed"
+        android:text="5"
+        app:layout_constraintBottom_toTopOf="@+id/no_2"
+        app:layout_constraintLeft_toRightOf="@+id/no_4" />
+
+    <Button
+        android:id="@+id/no_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:onClick="calcButtonPressed"
+        android:text="3"
+        app:layout_constraintBottom_toTopOf="@+id/add"
+        app:layout_constraintLeft_toRightOf="@+id/no_2" />
+
+    <Button
+        android:id="@+id/no_4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:onClick="calcButtonPressed"
+        android:text="4"
+        app:layout_constraintBottom_toTopOf="@+id/no_1"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <Button
+        android:id="@+id/no_6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:onClick="calcButtonPressed"
+        android:text="6"
+        app:layout_constraintBottom_toTopOf="@+id/no_3"
+        app:layout_constraintLeft_toRightOf="@+id/no_5" />
+
+    <Button
+        android:id="@+id/no_7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:onClick="calcButtonPressed"
+        android:text="7"
+        app:layout_constraintBottom_toTopOf="@+id/no_4"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <Button
+        android:id="@+id/no_8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:onClick="calcButtonPressed"
+        android:text="8"
+        app:layout_constraintBottom_toTopOf="@+id/no_5"
+        app:layout_constraintLeft_toRightOf="@+id/no_7" />
+
+    <Button
+        android:id="@+id/no_9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:onClick="calcButtonPressed"
+        android:text="9"
+        app:layout_constraintBottom_toTopOf="@+id/no_6"
+        app:layout_constraintLeft_toRightOf="@+id/no_8" />
+
+    <Button
+        android:id="@+id/button9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:text="C"
+        app:layout_constraintBottom_toTopOf="@+id/no_7"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <Button
+        android:id="@+id/button11"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:text="/"
+        app:layout_constraintBottom_toTopOf="@+id/no_8"
+        app:layout_constraintLeft_toRightOf="@+id/button9" />
+
+    <Button
+        android:id="@+id/button12"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:text="*"
+        app:layout_constraintBottom_toTopOf="@+id/no_9"
+        app:layout_constraintLeft_toRightOf="@+id/button11" />
+
+    <Button
+        android:id="@+id/minusBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:onClick="calcButtonPressed"
+        android:text="-"
+        app:layout_constraintBottom_toTopOf="@+id/no_9"
+        app:layout_constraintLeft_toRightOf="@+id/button12" />
+
+    <Button
+        android:id="@+id/plusBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="103dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:onClick="calcButtonPressed"
+        android:text="+"
+        app:layout_constraintBottom_toTopOf="@+id/enterBtn"
+        app:layout_constraintLeft_toRightOf="@+id/no_9"
+        tools:layout_editor_absoluteX="296dp"
+        tools:layout_editor_absoluteY="295dp" />
 
 </android.support.constraint.ConstraintLayout>
