--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,66 +10,50 @@
         android:id="@+id/add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:text="."
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/no_2" />
 
     <EditText
-        android:id="@+id/input_1"
-        android:layout_width="368dp"
-        android:layout_height="44dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:inputType="number"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <EditText
         android:id="@+id/input_2"
-        android:layout_width="368dp"
-        android:layout_height="0dp"
-        android:layout_marginRight="8dp"
+        android:layout_width="0dp"
+        android:layout_height="166dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:inputType="number"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/input_1" />
-
-    <Button
-        android:id="@+id/executeBtn"
-        android:layout_width="285dp"
-        android:layout_height="51dp"
-        android:layout_marginLeft="74dp"
-        android:layout_marginStart="42dp"
-        android:onClick="onClick"
-        android:text="Execute"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:inputType="none"
+        android:textSize="36sp"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.223" />
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1" />
 
     <EditText
         android:id="@+id/outputTxt"
-        android:layout_width="368dp"
-        android:layout_height="46dp"
-        android:layout_marginBottom="293dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="16dp"
+        android:layout_width="0dp"
+        android:layout_height="42dp"
+        android:layout_marginBottom="285dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
-        android:inputType="text"
-        android:text="output: "
+        android:inputType="none"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/executeBtn"
-        app:layout_constraintVertical_bias="0.6" />
+        app:layout_constraintTop_toBottomOf="@+id/input_2"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1" />
 
     <Button
         android:id="@+id/no_1"
@@ -77,6 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:onClick="calcButtonPressed"
         android:text="1"
         app:layout_constraintBottom_toTopOf="@+id/no_0"
@@ -88,6 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:onClick="calcButtonPressed"
         android:text="2"
         app:layout_constraintBottom_toTopOf="@+id/no_0"
@@ -97,8 +83,8 @@
         android:id="@+id/enterBtn"
         android:layout_width="wrap_content"
         android:layout_height="105dp"
-        android:layout_marginBottom="0dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:onClick="calcButtonPressed"
         android:text="Enter"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -108,14 +94,12 @@
         android:id="@+id/no_0"
         android:layout_width="183dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
         android:onClick="calcButtonPressed"
         android:text="0"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_editor_absoluteY="464dp" />
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
         android:id="@+id/no_5"
@@ -123,6 +107,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:onClick="calcButtonPressed"
         android:text="5"
         app:layout_constraintBottom_toTopOf="@+id/no_2"
@@ -134,6 +119,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:onClick="calcButtonPressed"
         android:text="3"
         app:layout_constraintBottom_toTopOf="@+id/add"
@@ -145,6 +131,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:onClick="calcButtonPressed"
         android:text="4"
         app:layout_constraintBottom_toTopOf="@+id/no_1"
@@ -156,6 +143,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:onClick="calcButtonPressed"
         android:text="6"
         app:layout_constraintBottom_toTopOf="@+id/no_3"
@@ -167,6 +155,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:onClick="calcButtonPressed"
         android:text="7"
         app:layout_constraintBottom_toTopOf="@+id/no_4"
@@ -178,6 +167,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:onClick="calcButtonPressed"
         android:text="8"
         app:layout_constraintBottom_toTopOf="@+id/no_5"
@@ -189,30 +179,35 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:onClick="calcButtonPressed"
         android:text="9"
         app:layout_constraintBottom_toTopOf="@+id/no_6"
         app:layout_constraintLeft_toRightOf="@+id/no_8" />
 
     <Button
-        android:id="@+id/button9"
+        android:id="@+id/cancelBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:onClick="calcButtonPressed"
         android:text="C"
         app:layout_constraintBottom_toTopOf="@+id/no_7"
         app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
-        android:id="@+id/button11"
+        android:id="@+id/divideBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:onClick="calcButtonPressed"
         android:text="/"
         app:layout_constraintBottom_toTopOf="@+id/no_8"
-        app:layout_constraintLeft_toRightOf="@+id/button9" />
+        app:layout_constraintLeft_toRightOf="@+id/cancelBtn" />
 
     <Button
         android:id="@+id/multiplyBtn"
@@ -220,10 +215,11 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:onClick="calcButtonPressed"
         android:text="*"
         app:layout_constraintBottom_toTopOf="@+id/no_9"
-        app:layout_constraintLeft_toRightOf="@+id/button11" />
+        app:layout_constraintLeft_toRightOf="@+id/divideBtn" />
 
     <Button
         android:id="@+id/minusBtn"
@@ -231,6 +227,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:onClick="calcButtonPressed"
         android:text="-"
         app:layout_constraintBottom_toTopOf="@+id/no_9"
@@ -242,11 +239,10 @@
         android:layout_height="103dp"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:onClick="calcButtonPressed"
         android:text="+"
         app:layout_constraintBottom_toTopOf="@+id/enterBtn"
-        app:layout_constraintLeft_toRightOf="@+id/no_9"
-        tools:layout_editor_absoluteX="296dp"
-        tools:layout_editor_absoluteY="295dp" />
+        app:layout_constraintLeft_toRightOf="@+id/no_9" />
 
 </android.support.constraint.ConstraintLayout>
